Add custom context support